# MLcode

./: CMakeLists.txt  README.md
include/: DecisionTree.h  LinearRegression.h  LogisticRegression.h
mytest/: DTdata.txt  DTtest.cpp  lrdata.txt  mytest.cpp
mytest/.ipynb_checkpoints/: mytest-checkpoint.cpp
src/: BoostingTree_example.ipynb  DecisionTree.cpp  DecisionTree.ipynb  DecisionTrees.ipynb  DecisionTrees_example.ipynb  LinearRegression.cpp  LogisticRegression.cpp  RandomForest_example.ipynb  Untitled.ipynb  learn_xgboost.ipynb  svm.ipynb  xgb_submission.csv  xgboost_example.ipynb
src/.ipynb_checkpoints/: AdaBoostClassification-checkpoint.py  AdaBoost_example-checkpoint.ipynb  BoostingTree_example-checkpoint.ipynb  DecisionTree-checkpoint.cpp  DecisionTree-checkpoint.ipynb  DecisionTrees-checkpoint.ipynb  DecisionTrees-checkpoint.py  DecisionTrees_example-checkpoint.ipynb  MyXGBoost-checkpoint.py  MyXGBoost_example-checkpoint.ipynb  RandomForest-checkpoint.py  RandomForest_example-checkpoint.ipynb  svm-checkpoint.ipynb
